--- a/Project Hashtag/appsettings.json
+++ b/Project Hashtag/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=InstaBook;Integrated Security=True;MultipleActiveResultSets=true"
+  },
+  "Uploads": {
+    "FolderPath": "..\\..\\UploadedFiles",
+    "URLPath": "/uploads"
   }
 }
